<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignActivity"
    android:background="@color/primary">
    <RelativeLayout
        android:id="@+id/Layout_Activity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:background="@color/black">
        <ImageView
            android:id="@+id/Image_Application"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_palma"
            android:contentDescription="@string/ContentDescription_Application"/>

        <TextView
            android:id="@+id/Label_Application"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Image_Application"
            android:layout_centerHorizontal="true"
            android:textSize="30sp"
            android:text="@string/app_name"
            android:textColor="@color/primary"/>

        <RelativeLayout
            android:id="@+id/Layout_Sign"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="25dp"
            android:layout_below="@id/Label_Application">
            <TextView
                android:id="@+id/Label_Username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/Label_Username"
                android:textColor="@color/primary"/>

            <EditText
                android:id="@+id/Input_Username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/Label_Username"
                android:inputType="textPersonName"
                android:autofillHints="username"
                android:textSize="20sp"
                android:hint="@string/Hint_Username"
                android:textColorHint="@color/black"
                android:background="@color/primary"/>

            <TextView
                android:id="@+id/Label_Gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/Input_Username"
                android:textSize="18sp"
                android:text="@string/Label_Gender"
                android:textColor="@color/primary"/>

            <Spinner
                android:id="@+id/Input_Gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/Input_Username"
                android:layout_toEndOf="@id/Label_Gender"
                android:entries="@array/Option_Gender"
                android:background="@color/primary"/>

            <TextView
                android:id="@+id/Label_Birthdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/Input_Gender"
                android:textSize="18sp"
                android:text="@string/Label_Birthdate"
                android:textColor="@color/primary"/>

            <EditText
                android:id="@+id/Input_Birthdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/Input_Gender"
                android:layout_toEndOf="@id/Label_Birthdate"
                android:inputType="date"
                android:autofillHints="name"
                android:textSize="20sp"
                android:hint="@string/Hint_Birthdate"
                android:textColorHint="@color/black"
                android:background="@color/primary"/>

            <TextView
                android:id="@+id/Label_Mobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Input_Birthdate"
                android:textSize="18sp"
                android:text="@string/Label_Mobile"
                android:textColor="@color/primary"/>

            <EditText
                android:id="@+id/Input_Mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/Input_Birthdate"
                android:layout_toEndOf="@id/Label_Mobile"
                android:inputType="phone"
                android:autofillHints="phone"
                android:textSize="20sp"
                android:hint="@string/Hint_Mobile"
                android:textColorHint="@color/black"
                android:background="@color/primary"/>

            <TextView
                android:id="@+id/Label_Email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/Input_Mobile"
                android:textSize="18sp"
                android:text="@string/Label_Email"
                android:textColor="@color/primary"/>

            <EditText
                android:id="@+id/Input_Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/Input_Mobile"
                android:layout_toEndOf="@id/Label_Email"
                android:inputType="textEmailAddress"
                android:autofillHints="emailAddress"
                android:textSize="20sp"
                android:hint="@string/Hint_Email"
                android:textColorHint="@color/black"
                android:background="@color/primary"/>

            <TextView
                android:id="@+id/Label_Password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/Input_Email"
                android:textSize="18sp"
                android:text="@string/Label_Password"
                android:textColor="@color/primary"/>

            <EditText
                android:id="@+id/Input_Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/Input_Email"
                android:layout_toEndOf="@id/Label_Password"
                android:inputType="textPassword"
                android:autofillHints="password"
                android:textSize="20sp"
                android:hint="@string/Hint_Password"
                android:textColorHint="@color/black"
                android:background="@color/primary"/>

            <TextView
                android:id="@+id/Label_Repeat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/Input_Password"
                android:textSize="18sp"
                android:text="@string/Label_Repeat"
                android:textColor="@color/primary"/>

            <EditText
                android:id="@+id/Input_Repeat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/Input_Password"
                android:layout_toEndOf="@id/Label_Repeat"
                android:inputType="textPassword"
                android:autofillHints="password"
                android:textSize="20sp"
                android:hint="@string/Hint_Repeat"
                android:textColorHint="@color/black"
                android:background="@color/primary"/>

            <Button
                android:id="@+id/Butt_Sign"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_below="@id/Input_Repeat"
                android:textSize="18sp"
                android:text="@string/Butt_Sign"
                android:textColor="@color/black"
                android:backgroundTint="@color/primary"/>
        </RelativeLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>