<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MessageActivity"
    android:background="@color/green">
    <RelativeLayout
        android:id="@+id/Layout_Activity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:background="@color/black">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/List_Contact"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            tools:listitem="@layout/cardview_contact"/>

        <RelativeLayout
            android:id="@+id/Layout_Message"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toEndOf="@id/List_Contact">

            <RelativeLayout
                android:id="@+id/Layout_Header"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentTop="true"
                android:background="@color/green">

                <ImageView
                    android:id="@+id/Image_Contact"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_user"
                    android:contentDescription="@string/ContentDescription_Contact"/>

                <TextView
                    android:id="@+id/Output_Contact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/Image_Contact"
                    android:layout_centerVertical="true"
                    android:textSize="30sp"
                    android:text="@string/Output_Contact"
                    android:textColor="@color/black"/>
            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/List_Message"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/Layout_Header"
                android:layout_above="@id/Layout_Send"
                tools:listitem="@layout/cardview_message"/>

            <RelativeLayout
                android:id="@+id/Layout_Send"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:background="@color/green">

                <EditText
                    android:id="@+id/Input_Message"
                    android:layout_width="273dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:inputType="textLongMessage"
                    android:autofillHints="username"
                    android:textSize="20sp"
                    android:hint="@string/Hint_Message"
                    android:textColorHint="@color/green"
                    android:textColor="@color/green"
                    android:background="@color/black"/>

                <Button
                    android:id="@+id/Butt_Send"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/Input_Message"
                    android:layout_centerVertical="true"
                    android:textSize="18sp"
                    android:text="@string/Butt_Message"
                    android:textColor="@color/green"
                    android:backgroundTint="@color/black"/>
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>